deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      
---

kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: frontend
