ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: "nginx"
  rules:
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: investment-service
          servicePort: 9001
        path: /investments/*
